Navigation bar and breadcrumbs

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,12 @@
 .row_not_centered{
     justify-content: flex-start;
 }
+
+.navbar-dark{
+    background-color: #512DA8;
+}
+
+.body{
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
