--- a/css/styles.css
+++ b/css/styles.css
@@ -53,3 +53,10 @@
 .radio{
     margin-right:8px;
 }
+
+.tab-content{
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
