--- a/css/styles.css
+++ b/css/styles.css
@@ -1,79 +1,56 @@
-.row-header{
-    margin: 0px auto;
-    padding: 0px auto;
+.row-header {
+  margin: 0px auto;
+  padding: 0px 0px;
 }
-
-.row-content{
-    margin: 0px auto;
-    padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height: 400px;  
-    align-items: center;
+.row-content {
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
-
-.footer{
-    background-color: #D1C4E9;
-    margin: 0px auto;
-    padding: 20px 0px 20px 0px;
-
+.footer {
+  background-color: #D1C4E9;
+  margin: 0px auto;
+  padding: 20px 0px;
 }
-
-.jumbotron{
-    padding: 70px 30px 70px 30px;
-    margin: 0px auto;
-    background: #9575CD;
-    color:  floralwhite;
+.jumbotron {
+  margin: 0px auto;
+  padding: 70px 30px;
+  background: #9575CD;
+  color: floralwhite;
 }
-
-.address{
-    font-size: 80%;
-    margin: 0px;
-    color: #0F0F0f;
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
-
-.row{
-    justify-content: center;
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 0;
 }
-.row_not_centered{
-    justify-content: flex-start;
+.navbar-dark {
+  background-color: #512DA8;
 }
-
-.navbar-dark{
-    background-color: #512DA8;
+.tab-content {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
 }
-
-.body{
-    padding: 50px 0px 0px 0px;
-    z-index: 0;
+.carousel {
+  background: #512DA8;
 }
-
-.radio-inline {
-    padding:12px;
+.carousel .carousel-item {
+  height: 300px;
 }
-.radio{
-    margin-right:8px;
+.carousel .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
 }
-
-.tab-content{
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-}
-.carousel{
-    background: #512da8
-}
-.carousel-item{
-    height: 300px;
-}
-.carousel-item img{
-    pointer-events: absolute;
-    top:0;
-    left:0;
-    min-height: 300px;
-}
-#carouselButton{
-    right: 0px;
-    position: absolute;
-    bottom: 0px;
+#carouselButton {
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
 }
