--- a/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -1,12 +1,12 @@
 <div class="container"
-    fxLayout="row"
+    fxLayout="row wrap"
     fxLayout.sm="column"
     fxLayout.xs="column"
     fxLayoutAlign.gt-md="space-around center"
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
+  <div fxFlex="100">
       <mat-card *ngIf="dish">
             <mat-card-header>
                 <mat-card-title>
@@ -18,6 +18,7 @@
                 <p>{{dish.description}}</p>
             </mat-card-content>
             <mat-card-actions>
+                <button mat-button (click)="goBack()">BACK</button>
                 <button mat-button>LIKE</button>
                 <button mat-button>SHARE</button>
             </mat-card-actions>
