--- a/conFusion/src/app/about/about.component.html
+++ b/conFusion/src/app/about/about.component.html
@@ -56,6 +56,15 @@
 
   <div fxFlex>
     <h2>Corporate Leadership</h2>
-    <p>Display the details of the corporate leaders here</p>
+      <mat-list>
+        <mat-list-item *ngFor="let leader of leaders">
+           <img matListAvatar src={{leader.image}} alt={{leader.name}} >  
+           <h1 matLine> {{leader.name}}  {{leader.abbr}}</h1>
+            <h1 matLine> {{leader.designation}} </h1>
+            <p matLine>
+                <span> {{leader.description}} </span>
+            </p>
+      </mat-list-item>
+    </mat-list>
   </div>
 </div>
