--- a/conFusion/src/app/home/home.component.html
+++ b/conFusion/src/app/home/home.component.html
@@ -42,7 +42,7 @@
   </mat-card-header>
   <img mat-card-image src={{leader.image}} alt={{leader.name}}>
   <mat-card-content>
-    <p>{{promotion.description}}
+    <p>{{leader.description}}
     </p>
   </mat-card-content>
 </mat-card>
