--- a/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -5,7 +5,7 @@
     fxLayoutAlign.gt-md="space-around center"
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
-
+  
   <div fxFlex="40">
       <mat-card *ngIf="dish">
             <mat-card-header>
@@ -40,10 +40,37 @@
                 <br/> -- {{comment.author}} {{comment.date| date}} 
             </mat-list>
       </mat-card>
+      <div *ngIf="commentForm.valid">
+        <h4> Your comment is ready for submissiion, here is the preview.</h4>
+        <p>
+            <br/>{{commentForm.value.comment| json}}
+            <br/>{{commentForm.value.rating| json}} Stars
+            <br/> -- {{commentForm.value.author| json}}
+        </p>
+     </div>
+      <form novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+        </mat-form-field>
+      </p>
+        <p>
+           <mat-slider formControlName="rating" min="1" max="5" step="1" class="full-width" tickInterval="1" ></mat-slider>
+        </p>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows=10></textarea>
+          <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" disabled="{{commentForm.invalid }}" mat-button class="background-primary text-floral-white" >Submit</button>
+    </form>
   </div>
   <div [hidden]="dish">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
   </div>
+  
     
     
 </div>
