Angular directive and animations

--- a/conFusion/src/app/menu/menu.component.html
+++ b/conFusion/src/app/menu/menu.component.html
@@ -6,9 +6,9 @@
         <hr>
     </div>
 
-    <div fxFlex *ngIf="dishes">
+    <div fxFlex *ngIf="dishes" fxFlex [@expand]="expand">
         <mat-grid-list cols="2" rowHeight="200px">
-             <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
+             <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]" appHighlight>
                 <img height="200px" src="{{baseURL + dish.image }}" alt={{dish.name}}>
                 <mat-grid-tile-footer>
                     <h1 matLine> {{dish.name| uppercase}}</h1>
@@ -16,13 +16,13 @@
             </mat-grid-tile>
         </mat-grid-list>
     </div>
+    
     <div [hidden]="dishes || errMess">
         <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
     </div>
+    
     <div fxFlex *ngIf="errMess">
-    <h2>Error</h2>
-    <h4>{{errMess}}</h4>
+        <h2>Error</h2>
+        <h4>{{errMess}}</h4>
     </div>
 </div>
-
-
