--- a/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -6,8 +6,8 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
   
-  <div fxFlex="50">
-      <mat-card *ngIf="dish">
+  <div fxFlex="40"  *ngIf="dish" [@visibility]="visibility">
+      <mat-card>
             <mat-card-header>
                 <mat-card-title>
                     <h3>{{dish.name| uppercase}}</h3>
@@ -31,7 +31,7 @@
         </mat-card>
   </div>
 
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
     <mat-card>
         <h3>Comments</h3>
             <mat-list  rowHeight="100px" *ngFor="let comment of dish.comments">
