--- a/conFusion/src/app/home/home.component.html
+++ b/conFusion/src/app/home/home.component.html
@@ -4,8 +4,8 @@
      fxLayout.xs="column"
      fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px">
-
-<mat-card *ngIf="dish" fxFlex>
+<div *ngIf="dish" fxFlex [@expand]="expand">
+<mat-card >
   <mat-card-header>
     <div mat-card-avatar></div>
     <mat-card-title>
@@ -18,33 +18,45 @@
     </p>
   </mat-card-content>
 </mat-card>
+</div>
+<div [hidden]="promotion" fxFlex>
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
+    
+    <div *ngIf="promotion" fxFlex fxFlex [@expand]="expand">
+    <mat-card>
+        <mat-card-header>
+            <div mat-card-avatar></div>
+            <mat-card-title>
+                <h3>{{promotion.name | uppercase}}</h3>
+            </mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="{{baseURL + promotion.image}}" alt={{promotion.name}}>
+        <mat-card-content>
+            <p>{{promotion.description}}</p>
+        </mat-card-content>
+    </mat-card>
+    </div>
+    <div fxFlex [hidden]="promotion">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
+    
+    <div *ngIf="leader" fxFlex fxFlex [@expand]="expand">
+        <mat-card>
+            <mat-card-header>
+                <div mat-card-avatar></div>
+                <mat-card-title>
+                    <h3>{{leader.name | uppercase}} {{leader.abbr | uppercase}}</h3>
+                </mat-card-title>
+            </mat-card-header>
+            <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+            <mat-card-content>
+                <p>{{leader.description}}</p>
+            </mat-card-content>
+        </mat-card>
+    </div>
 
-<mat-card *ngIf="promotion" fxFlex>
-  <mat-card-header>
-    <div mat-card-avatar></div>
-    <mat-card-title>
-      <h3>{{promotion.name | uppercase}}</h3>
-    </mat-card-title>
-  </mat-card-header>
-  <img mat-card-image src="{{baseURL + promotion.image}}" alt={{promotion.name}}>
-  <mat-card-content>
-    <p>{{promotion.description}}
-    </p>
-  </mat-card-content>
-</mat-card>
-
-<mat-card *ngIf="leader" fxFlex>
-  <mat-card-header>
-    <div mat-card-avatar></div>
-    <mat-card-title>
-      <h3>{{leader.name | uppercase}} {{leader.abbr | uppercase}}</h3>
-    </mat-card-title>
-  </mat-card-header>
-  <img mat-card-image src={{leader.image}} alt={{leader.name}}>
-  <mat-card-content>
-    <p>{{leader.description}}
-    </p>
-  </mat-card-content>
-</mat-card>
-
+    <div [hidden]="leader">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
 </div>
