--- a/conFusion/src/app/about/about.component.html
+++ b/conFusion/src/app/about/about.component.html
@@ -58,7 +58,7 @@
     <h2>Corporate Leadership</h2>
       <mat-list>
         <mat-list-item *ngFor="let leader of leaders">
-           <img matListAvatar src={{leader.image}} alt={{leader.name}} >  
+           <img matListAvatar src="{{baseURL+leader.image}}" alt={{leader.name}} >  
            <h1 matLine> {{leader.name}}  {{leader.abbr}}</h1>
             <h1 matLine> {{leader.designation}} </h1>
             <p matLine>
@@ -67,4 +67,13 @@
       </mat-list-item>
     </mat-list>
   </div>
+    
+  <div [hidden]="leaders || errMsg">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+    
+  <div fxFlex *ngIf="errMsg">
+        <h2>Error</h2>
+        <h4>{{errMsg}}</h4>
+  </div>  
 </div>
