--- a/conFusion/src/app/menu/menu.component.html
+++ b/conFusion/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
         <hr>
     </div>
 
-    <div fxFlex *ngIf="dishes" fxFlex [@expand]="expand">
+    <div fxFlex *ngIf="dishes" [@expand]="expand">
         <mat-grid-list cols="2" rowHeight="200px">
              <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]" appHighlight>
                 <img height="200px" src="{{baseURL + dish.image }}" alt={{dish.name}}>
