--- a/ionic/conFusion/src/pages/contact/contact.scss
+++ b/ionic/conFusion/src/pages/contact/contact.scss
@@ -1,3 +1,10 @@
 page-contact {
-
+    .button_right{
+        float:right ;
+        margin-right: 75px;
+    }
+    
+.ion-card-content {
+    font-style: italic;
+  }
 }
