--- a/ionic/conFusion/src/app/app.html
+++ b/ionic/conFusion/src/app/app.html
@@ -6,7 +6,7 @@
             </ion-toolbar>
         </ion-header>
 
-        <ion-content>
+        <ion-content class="background-pale">
             <ion-list>
                 <ion-list-header color="primary-light" text-wrap>
                     <ion-thumbnail item-left>
@@ -23,6 +23,9 @@
                 <button color="primary-pale" menuClose ion-item (click)="openReserve()">
                     <ion-icon name="restaurant" item-left></ion-icon>
                     Reserve Table
+                </button>
+                <button color="primary-pale" menuClose ion-item (click)="openLogin()">
+                    <ion-icon name="log-in" item-left></ion-icon>Login
                 </button>
             </ion-list>
         </ion-content>
